--- a/main.html
+++ b/main.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div id="div1">
+		<div id="box1"></div>
+	    <div id="box2"></div>
+		<div id="box3"></div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
