--- a/main.html
+++ b/main.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-	<div id="div1">
-		<div id="box1"></div>
-	    <div id="box2"></div>
-		<div id="box3"></div>
+	<div class="container">
+		<div class="red"></div>
+	    <div class="green"></div>
+		<div class="yellow"></div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
